--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Fix warning coming from SQL::Abstract::Tree
 
 0.001002  2013-03-02 10:31:56 CST6CDT
        - Fix a typo in ::FromProfile POD
