--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Allow setting profile via ENV var (GH#3)
 
 0.001003  2014-07-03 23:40:54-05:00 America/Chicago
        - Fix stacktrace option (T)
